[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/rings/ring.gd" type="Script" id=1]
[ext_resource path="res://objects/audios/RingAudio.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/rings/ring.png" type="Texture" id=3]
[ext_resource path="res://scripts/nodes/score_controller.gd" type="Script" id=4]
[ext_resource path="res://objects/particles/ring_sparkle.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "rotate"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "rotate"

[sub_resource type="AnimationNodeBlendTree" id=3]
graph_offset = Vector2( -232, 74 )
nodes/Animation/node = SubResource( 2 )
nodes/Animation/position = Vector2( 100, 120 )
node_connections = [ "output", 0, "Animation" ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 6.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Ring" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 32768
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/rotate = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource( 3 )
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="RingSparkle" parent="." instance=ExtResource( 5 )]
visible = false
z_index = 1

[node name="RingAudio" parent="." instance=ExtResource( 2 )]

[node name="ScoreController" type="Node" parent="."]
script = ExtResource( 4 )
rings = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="despawn" type="Timer" parent="."]
wait_time = 4.167

[node name="notifier" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.8, 0.8 )

[node name="fade" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 6 )
anims/fade = SubResource( 7 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn"]
[connection signal="screen_entered" from="notifier" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_screen_exited"]
[connection signal="animation_finished" from="fade" to="." method="_on_fade_animation_finished"]
